@@ -21,6 +21,17 @@ logfile="/var/log/hockeypuck/hockeypuck.log"
 #driver="postgres"
 #dsn="dbname=hkp host=/var/run/postgresql sslmode=disable"
 
+# SKS Reconciliation Protocol for OpenPGP
+#[conflux.recon]
+## SKS recon listen port
+#reconPort=11370
+## HTTP port reported to peer (TODO: copy from hockeypuck.hkp.bind)
+#httpPort=11371
+## List of peers Hockeypuck will gossip with
+#partners["sks1.cmarstech.com:11370","sks2.cmarstech.com:11370"]
+## SKS filters, which must match your peers' configuration
+#filters=["yminsky.dedup"]
+
 # OpenPGP PKS mail synchronization
 #[hockeypuck.openpgp.pks]
 ## Send keys to these PKS servers
