@@ -28,10 +28,10 @@ import (
 	"github.com/qpliu/qrencode-go/qrencode"
 	"image/png"
 	"io"
-	"log"
 	"launchpad.net/hockeypuck"
 	. "launchpad.net/hockeypuck/errors"
 	"launchpad.net/hockeypuck/hkp"
+	"log"
 	"net/http"
 	"net/url"
 	"os"
