@@ -19,9 +19,9 @@ package openpgp
 
 import (
 	"bytes"
+	_ "code.google.com/p/go.crypto/md4"
 	"code.google.com/p/go.crypto/openpgp/packet"
 	_ "code.google.com/p/go.crypto/ripemd160"
-_ "code.google.com/p/go.crypto/md4"
 	_ "crypto/md5"
 	_ "crypto/sha1"
 	_ "crypto/sha256"
